--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,5 @@
-# Discord-Bot Token
-DISCORD_TOKEN=Dein_Discord_Bot_Token
-
-# Discord-Channel ID für Posts
-CHANNEL_ID=Deine_Channel_ID
-
-# Zeitzone
+DISCORD_TOKEN=dein_bot_token
+CLIENT_ID=deine_bot_application_id
+GUILD_ID=deine_test_guild_id
+CHANNEL_ID=die_kanal_id_für_Cron_Posts
 TZ=Europe/Berlin
